syntax = "proto3";

package com.ixaris.commons.jooq.microservices.example;

import "scsl.proto";

option optimize_for = SPEED;
option (scsl.location) = "example.scsl";

message ExampleContext {
    string security = 1;
}

message ExampleEvent {
    int32 id = 1;
}




